# VkSamples

./: .gitignore  CMakeLists.txt  README.md  generate.bat
src/Clear/: CMakeLists.txt
src/Clear/shaders/: shader.frag  shader.vert
src/Clear/source/: main.cpp
src/Triangle/: CMakeLists.txt
src/Triangle/source/: triangle.cpp
src/core/include/: core.h
src/core/source/: core.cpp
